--- a/app/src/main/res/drawable/ic_colordot.xml
+++ b/app/src/main/res/drawable/ic_colordot.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:tint="#F43636"
+<vector android:height="24dp" android:tint="#364EA6"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white"
